# rust-visualizer

./: .gitigonre  README.md  generate-icons.sh  index.html  package-lock.json  package.json  setup.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analyzer.rs  main.rs  models.rs  parser.rs  python_analyzer.rs
src/components/: CodeViewer.css  CodeViewer.tsx  GraphView.css  GraphView.tsx
