[package]
name = "rust-project-visualizer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
walkdir = "2.4"
cargo_metadata = "0.18"
anyhow = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
